  * Improve dpkg-source's logic to identify ignored files. Closes: #632168
  * Fix a small typo in dpkg-source(1). Closes: #632937
  * Reword the description of dpkg-source --before-build and --after-build
    to be clearer. Closes: #608260
  * dpkg-buildpackage no longer exports the compiler flags. Closes: #560070
    Packages must directly call dpkg-buildflags to retrieve them.

  [ Guillem Jover ]
  * Install deb-src-control(5) man pages in dpkg-dev. Closes: #620520
  * Add ‘.gitmodules’ to the default dpkg-source ignore lists. Closes: #620490
  * Document in dpkg-query(1) man page that on --listfiles each list of
    files per package name is separated by a blank line. Same goes for
    --status and --print-avail.
  * Use execvp(3) unconditionally in command_exec(). Making the call always
    fallback to use the system shell in case of error, such as with empty
    maintainer scripts. Thanks to Jonathan Nieder <jrnieder@gmail.com>.
    Closes: #622094
  * Improve deb-split(5) format description by splitting debian-split
    member contents into a list.
  * Switch to debhelper compatibility level 7.
    - Use dh_prep instead of deprecated “dh_clean -k”.
  * Bump Standards-Version to 3.9.2 (no changes needed).
  * Generate filenames following current conventions on “dpkg-split --join”,
    by including the architecture in the debian-split member of a split
    package and using underscores to separate filename parts.
  * Support conffiles with spaces when diffing them. Closes: #147583
  * Allow installing packages with bogus versions with new
    --force-bad-version.
  * Do not fail when unpacking a diverted hardlink. Closes: #245322
    Based on a patch by Christopher Baines <cbaines8@gmail.com>.
  * Document in dpkg-deb(1) that --fsys-tarfile will always process the
    input archive sequentially. Closes: #616609
  * Remove long non-functional --new and --old dpkg-deb option handling
    from dpkg which were being treated as dpkg commands.