@@ -62,6 +62,9 @@ dpkg (1.16.1) UNRELEASED; urgency=low
     to be clearer. Closes: #608260
   * dpkg-buildpackage no longer exports the compiler flags. Closes: #560070
     Packages must directly call dpkg-buildflags to retrieve them.
+  * dpkg-buildflags parses a supplementary configuration file under the
+    control of the package maintainer: debian/buildflags (or the corresponding
+    architecture/os specific variants).
 
   [ Guillem Jover ]
   * Install deb-src-control(5) man pages in dpkg-dev. Closes: #620520
